tests/baselines/reference/parserModifierOnStatementInBlock2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock2.ts (2 errors) ====
    {
       declare var x = this;
               ~~~
!!! error TS1005: ';' expected.
       ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
    }
    